# noctctl

./: CMakeLists.txt  DEVELOPMENT.md  IPC_PROTOCOL.md  LICENSE  README.md
include/: noctctl.h
src/: ipc.c  main.c
